Projet GL/test/src/test/deca/syntax/valid/single_semi.deca
// Description:
//    semi sans instruction
//
// Resultats:
//    signle_semi.res
//
// Historique:
//    cree le 10/01/2023

{
    print("Hello World");

    ;

    print("Hello World");
}
