Projet GL/test/src/test/deca/syntax/invalid/bad_print.deca
// Description:
//    print avec 2 identificateur sans virgule
//
// Resultats:
//    no viable alternative at input 'b'
//
// Historique:
//    cree le 10/01/2023

{
    print(a b);
}
